--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,5 @@
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
-@import './theme.scss';
+@import "./theme.scss";
 // Blocks
 html,
 body,
@@ -27,7 +27,7 @@ h6 {
   margin: 0;
   padding: 0;
 }
-body{
+body {
   background-color: var(--color-background);
 }
 
@@ -43,6 +43,7 @@ h6 {
 }
 
 // List
+ol,
 ul {
   list-style: none;
 }
@@ -86,4 +87,18 @@ table {
 td,
 th {
   padding: 0;
+}
+
+button {
+  background: inherit;
+  border: none;
+  box-shadow: none;
+  border-radius: 0;
+  padding: 0;
+  overflow: visible;
+  cursor: pointer;
+}
+
+button:disabled {
+  cursor: default;
 }
