--- a/src/routes/home/HomePage.module.scss
+++ b/src/routes/home/HomePage.module.scss
@@ -1,32 +1,19 @@
 .main {
   display: flex;
   flex-direction: column;
-  gap: 40px;
-  padding: 40px;
+  padding: 0px 40px 40px 290px;
 }
 
-.layout-top {
+.header {
   position: relative;
   display: flex;
-}
-
-.layout-bottom {
-  display: flex;
   justify-content: space-between;
-}
-
-.layout-left {
-  display: flex;
-  flex-direction: column;
-}
-
-.layout-right {
-  display: flex;
-  flex-direction: column;
+  gap: 20px;
 }
 
 .welcome {
-  padding: 20px 0px 80px 0;
+  position: relative;
+  top: 40px;
   font-size: 40px;
   font-weight: 500;
 }
@@ -37,12 +24,32 @@
 }
 
 .buttons {
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
   display: flex;
   flex-direction: column;
+  align-items: end;
   gap: 10px;
 }
 
 .button {
   min-width: 100px;
   height: 60px;
+}
+
+.contents {
+  display: grid;
+  grid-template-columns: 1fr 1.5fr;
+  grid-template-rows: 1fr 1fr;
+  column-gap: 50px;
+  row-gap: 20px;
+}
+
+.notice {
+  align-self: flex-end;
+}
+
+.ranking {
+  align-self: center;
 }
