--- a/src/routes/profile/ProfilePage.module.scss
+++ b/src/routes/profile/ProfilePage.module.scss
@@ -1,13 +1,12 @@
 .main {
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
-  padding: 20px 40px;
+  padding: 0px 40px 40px 40px;
 }
 
 .container {
+  width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 30px;
 }
 
