✨ feat: 홈 페이지 컨텐츠 추가, 사이드바 페이지 연결

--- a/src/components/common/SideBar.module.scss
+++ b/src/components/common/SideBar.module.scss
@@ -11,6 +11,7 @@
   height: inherit;
   min-height: 100vh;
   background-color: var(--color-white);
+  z-index: 10;
 
   display: flex;
   flex-direction: column;
