--- a/src/components/common/ListBallon.module.scss
+++ b/src/components/common/ListBallon.module.scss
@@ -3,7 +3,6 @@
   position: relative;
   background-color: var(--color-grey);
   min-width: 200px;
-  max-width: 1000px;
   min-height: 100px;
   border-radius: 30px;
 }
@@ -23,10 +22,11 @@
 }
 
 .content {
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   gap: 10px;
-  padding: 60px 30px 40px 30px;
+  padding: 45px 30px 45px 30px;
+  overflow: hidden;
 }
