--- a/src/routes/home/HomePage.module.scss
+++ b/src/routes/home/HomePage.module.scss
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: space-between;
   gap: 20px;
+  padding-bottom: 20px;
 }
 
 .welcome {
@@ -21,6 +22,14 @@
 .arrival {
   position: absolute;
   bottom: 0;
+}
+
+.wrapper {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  gap: 10px;
+  overflow-x: hidden;
 }
 
 .buttons {
