--- a/src/components/common/ProfileSection.module.scss
+++ b/src/components/common/ProfileSection.module.scss
@@ -2,15 +2,24 @@
   display: flex;
   align-items: center;
   position: relative;
-  top: -40px;
-  padding: 10px;
+  right: -20px;
+  align-self: flex-end;
 }
+
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: center;
+  gap: 10px;
+}
+
 .nickname {
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: var(--color-pink);
-  border-radius: 15px;
+  border-radius: 0px 15px 15px 0px;
   padding: 5px 10px 5px 23px;
   text-align: center;
 
@@ -22,7 +31,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  left: 23px;
+  left: 20px;
   width: 40px;
   height: 40px;
   background-color: var(--color-white);
