--- a/src/components/common/SideBar.module.scss
+++ b/src/components/common/SideBar.module.scss
@@ -2,13 +2,16 @@
   width: 100vw;
   height: 100dvh;
   display: flex;
-  flex-wrap: nowrap;  
+  flex-wrap: nowrap;
 }
 
 .container {
+  position: fixed;
   width: 250px;
   height: inherit;
-  background-color: var(--color-white); 
+  min-height: 100vh;
+  background-color: var(--color-white);
+  z-index: 10;
 
   display: flex;
   flex-direction: column;
@@ -16,15 +19,15 @@
   align-items: center;
 }
 
-.user_info_block{
+.user_info_block {
   width: inherit;
-  height: 100px; 
+  height: 100px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.user_info{
+.user_info {
   width: 85%;
 
   display: flex;
@@ -32,40 +35,49 @@
   align-items: center;
   justify-content: space-between;
 }
-.user_img{
+.user_img {
   width: 70px;
   height: 70px;
   object-fit: cover;
 }
-.user_nickname{
-  width: 130px; 
+.user_nickname {
+  width: 130px;
   height: 40px;
   background-color: var(--color-pink);
   border-radius: 15px;
   font-size: 20px;
 
-  display: flex; 
-  align-items: center; 
+  display: flex;
+  align-items: center;
   justify-content: center;
 }
-.level_block{
+
+.level_block {
+  width: 90%;
+
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-between;
+
+  div {
     width: 25px;
     height: 22px;
     font-size: 10px;
     padding-top: 2px;
-    border: 2px solid #A6DFFF;
+    border: 2px solid #a6dfff;
     border-radius: 8px;
-    
-    display: flex;
-    align-items: center; 
-    justify-content: center; 
-  }
 
-.exp_progress{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.exp_progress {
   width: 80%;
 }
 
-.action_container{
+.action_container {
   width: inherit;
   height: 450px;
   margin-bottom: 30px;
@@ -73,14 +85,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  img{
+  img {
     width: 60px;
     height: 60px;
     object-fit: auto;
     margin-bottom: 10px;
   }
 }
-.action_button{
+.action_button {
   width: 80%;
   height: 42px;
   border: none;
@@ -89,16 +101,16 @@
   cursor: pointer;
   font-size: 15px;
 }
-.action_button:active{
+.action_button:active {
   background-color: #ebd59e;
 }
-.exit_codeython_menu{
-  width: 90%; 
+.exit_codeython_menu {
+  width: 90%;
 
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
-  span{    
+  span {
     text-decoration: underline;
     font-size: 10px;
     display: flex;
