--- a/src/components/common/ListBallon.module.scss
+++ b/src/components/common/ListBallon.module.scss
@@ -26,6 +26,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 10px;
   padding: 45px 30px 45px 30px;
   overflow: hidden;
