--- a/src/routes/home/HomePage.module.scss
+++ b/src/routes/home/HomePage.module.scss
@@ -62,3 +62,13 @@
 .ranking {
   align-self: center;
 }
+
+.skeleton {
+  width: 100%;
+  border-radius: 20px;
+}
+
+.arrival-skeleton {
+  width: 150px;
+  border-radius: 20px;
+}
