--- a/src/components/common/SideBar.module.scss
+++ b/src/components/common/SideBar.module.scss
@@ -104,7 +104,7 @@
 .action_button:active {
   background-color: #ebd59e;
 }
-.selected{
+.selected {
   background-color: #fff9e9;
 }
 .exit_codeython_menu {
@@ -132,16 +132,18 @@
 }
 
 @keyframes bounce {
-  0%,  50%, 100% {
+  0%,
+  50%,
+  100% {
     transform: translateX(0);
   }
-  20%{
+  20% {
     transform: translateX(40px);
   }
   30% {
     transform: translateX(30px);
   }
-  40%{
+  40% {
     transform: translateX(10px);
   }
   60% {
@@ -150,5 +152,6 @@
 }
 
 .container {
-  animation: slideInFromLeft 0.4s ease-out forwards, bounce 0.5s ease-in-out 0.4s;
+  animation: slideInFromLeft 0.4s ease-out forwards,
+    bounce 0.5s ease-in-out 0.4s;
 }
