✨ feat: sweet alert 커스텀, 닉네임 변경 로직 수정

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,7 @@
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
 @import "./theme.scss";
+@import "../libs/sweetAlert/alert.scss";
+
 // Blocks
 html,
 body,
