--- a/src/routes/profile/ProfilePage.module.scss
+++ b/src/routes/profile/ProfilePage.module.scss
@@ -33,3 +33,21 @@
   display: flex;
   gap: 30px;
 }
+
+.record {
+  animation-name: floatIn;
+  animation-duration: 2s;
+  animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+  animation-fill-mode: both;
+}
+
+@keyframes floatIn {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
