🐛 fix: language option 토글 안 되는 오류 수정

--- a/src/routes/problemList/ProblemListPage.module.scss
+++ b/src/routes/problemList/ProblemListPage.module.scss
@@ -6,10 +6,10 @@
 }
 
 .problemList_page__header {
-  width: 100%; /* 헤더를 가로로 꽉 차게 설정 */
+  width: 100%; 
   display: flex;
-  justify-content: center; /* 로고를 가운데 정렬 */
-  align-items: center; /* 로고를 세로 중앙 정렬 */
+  justify-content: center; 
+  align-items: center; 
   margin-top: 20px;
   margin-bottom: 40px;
 }
