✨ feat: 대기방 문제 변경 관련 퍼블리싱

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -8,5 +8,6 @@
   --color-grey: #ebebeb;
   --color-yellow: #f7e1ab;
   --color-skyblue: #a6dfff;
-  --color-darkgrey: #ADADAD;
+  --color-darkgrey: #adadad;
+  --color-pastelblue: #c8dbff;
 }
