--- a/src/routes/playMulti/components/modal/PeopleModal.module.scss
+++ b/src/routes/playMulti/components/modal/PeopleModal.module.scss
@@ -1,17 +1,36 @@
 .modal__people_container{
   position: absolute;
-  z-index: 20;
+  right: 0;
   background-color: var(--color-background);
   width: 230px;
   height: 350px;
-  right: 0;
   border-radius: 40px;
 
-  transition: opacity 0.2s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 
+  z-index: 20;
+  
+  transition: opacity 0.2s ease-in-out;
   box-shadow: 0px 0px 50px -10px rgba(0,0,0,0.3);
--webkit-box-shadow: 0px 0px 50px -10px rgba(0,0,0,0.3);
--moz-box-shadow: 0px 0px 50px -10px rgba(0,0,0,0.3);
+  -webkit-box-shadow: 0px 0px 50px -10px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0px 0px 50px -10px rgba(0,0,0,0.3);
+
+  p{
+    width: 70%;
+    background-color: var(--color-grey);
+    height: 10%;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    span{
+      font-size: 10px;
+      margin-top: 10px;
+    }
+  }
 }
 
 .modal__people_container_none{
