--- a/src/components/common/ListBallon.module.scss
+++ b/src/components/common/ListBallon.module.scss
@@ -26,8 +26,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   gap: 10px;
-  padding: 45px 30px 45px 30px;
+  padding: 7% 5% 7% 5%;
   overflow: hidden;
 }
