--- a/src/routes/home/components/ArrivalBlock.module.scss
+++ b/src/routes/home/components/ArrivalBlock.module.scss
@@ -1,10 +1,11 @@
 .container {
-  width: 150px;
+  width: 20%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   gap: 10px;
   background-color: var(--color-white);
   padding: 15px 10px;
@@ -12,11 +13,21 @@
   overflow: hidden;
 }
 
-.icon {
-  font-size: 40px;
+.info_wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
 }
+.icon {
+  font-size: 30px;
+}
+
 .title {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 600;
 }
 
@@ -24,21 +35,20 @@
   width: 100%;
   display: flex;
   justify-content: end;
+  font-size: 0.6rem;
   gap: 5px;
 }
 
 .difficulty {
   align-self: flex-end;
-  padding: 5px 10px;
+  padding: 5%;
   border-radius: 15px;
   background-color: rgb(253, 201, 159);
-  font-size: 12px;
 }
 
 .isPlayed {
   align-self: flex-end;
-  padding: 5px 10px;
+  padding: 5%;
   border-radius: 15px;
   background-color: rgb(211, 240, 167);
-  font-size: 12px;
 }
