--- a/src/components/common/ListBallon.module.scss
+++ b/src/components/common/ListBallon.module.scss
@@ -30,3 +30,13 @@
   padding: 7% 5% 7% 5%;
   overflow: hidden;
 }
+
+.thin_content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 45px;
+  overflow: hidden;
+}
