♻️ refactor: 랭킹, 레벨 표시 수정

--- a/src/routes/home/components/RankBlock.module.scss
+++ b/src/routes/home/components/RankBlock.module.scss
@@ -1,6 +1,5 @@
 .container {
   display: flex;
-  gap: 30px;
   width: 100%;
 }
 
@@ -21,9 +20,16 @@
   display: flex;
   gap: 10px;
   align-items: center;
+  margin-right: 30px;
 }
 
 .nickname {
   @extend %balloon;
   flex: 3;
+}
+
+.rank {
+  @extend %balloon;
+  flex: 0.05;
+  margin-right: 10px;
 }
