--- a/src/routes/waitingRoom/components/UserBox.module.scss
+++ b/src/routes/waitingRoom/components/UserBox.module.scss
@@ -67,7 +67,7 @@
   // min-height: 25%;
   padding: 5px 10px;
   top: 0;
-  left: 0;
+  right: 0;
   // margin-left: -35%;
   font-size: 13px;
   display: flex;
@@ -80,7 +80,7 @@
   content: "";
   position: absolute;
   bottom: 0;
-  left: 53%;
+  left: 43%;
   width: 0;
   height: 0;
   border: 10px solid transparent;
@@ -117,4 +117,10 @@
     width: 100%;
     height: 100%;
   }
+}
+
+.owner_icon {
+  position: absolute;
+  left: 5%;
+  top: 5%;
 }
