--- a/src/routes/waitingRoom/components/ChatPopUp.module.scss
+++ b/src/routes/waitingRoom/components/ChatPopUp.module.scss
@@ -16,12 +16,40 @@
   flex-direction: column;
 
   justify-content: space-between;
+
+  animation-name: floatIn;
+  animation-duration: 2s;
+  animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+  animation-fill-mode: both;
+}
+
+.popup_closed {
+  position: fixed;
+  left: 30px;
+  bottom: 30px;
+  z-index: 100;
+
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background-color: var(--color-brown);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.popup_closed:hover {
+  scale: 1.1;
 }
 
 .topbar {
   background-color: var(--color-brown);
   border-radius: 10px 10px 0 0;
-  padding: 2px;
+  padding: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: end;
 }
 
 .chatting_section {
@@ -66,4 +94,19 @@
   height: 50px;
   width: 100%;
   flex-grow: 0;
+}
+
+@keyframes floatIn {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.send_icon:hover {
+  scale: 1.1;
 }
