♻️ refactor: 수정 요청 사항

--- a/src/components/common/SideBar.module.scss
+++ b/src/components/common/SideBar.module.scss
@@ -51,6 +51,13 @@
   align-items: center;
   justify-content: center;
 }
+.level {
+  flex-grow: 1;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .level_block {
   width: 90%;
