--- a/src/routes/waitingRoom/components/Sidebar.module.scss
+++ b/src/routes/waitingRoom/components/Sidebar.module.scss
@@ -46,6 +46,14 @@
   justify-content: center;
 }
 
+.level {
+  flex-grow: 1;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .level_block {
   width: 90%;
 
