--- a/src/routes/playAlone/components/PlayAloneForm.module.scss
+++ b/src/routes/playAlone/components/PlayAloneForm.module.scss
@@ -46,6 +46,7 @@
 
   display: flex;
   flex-direction: column;
+  overflow: scroll;
 }
 
 .testcase_title_container {
@@ -103,4 +104,5 @@
 
 .limit_factor_list {
   margin-top: 10px;
+  list-style: disc;
 }
