--- a/src/routes/playMulti/components/PlayMultiForm.module.scss
+++ b/src/routes/playMulti/components/PlayMultiForm.module.scss
@@ -46,6 +46,7 @@
 
   display: flex;
   flex-direction: column;
+  overflow: scroll;
 }
 
 .testcase_title_container {
@@ -104,4 +105,5 @@
 
 .limit_factor_list {
   margin-top: 10px;
+  list-style: disc;
 }
