--- a/src/routes/waitingRoom/components/modal/ProblemListModal.module.scss
+++ b/src/routes/waitingRoom/components/modal/ProblemListModal.module.scss
@@ -23,7 +23,7 @@
 
 .container {
   width: 40%;
-  height: 50%;
+  height: 500px;
   padding: 30px;
   border-radius: 30px;
   display: flex;
@@ -35,6 +35,7 @@
 
 .list {
   width: 100%;
+  height: 350px;
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
