♻️ refactor: 입출력 예 scroll 추가 및 비율조정

--- a/src/routes/playAlone/components/PlayAloneForm.module.scss
+++ b/src/routes/playAlone/components/PlayAloneForm.module.scss
@@ -46,7 +46,7 @@
 
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  
 }
 
 .testcase_title_container {
@@ -68,6 +68,7 @@
 
   display: flex;
   flex-direction: column;
+  overflow: scroll;
 }
 
 .description {
@@ -95,14 +96,22 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  padding-bottom: 5px;
+  border-bottom: 1px solid var(--color-darkgrey);
 }
 
 .testcase_table {
-  border-bottom: 1px solid var(--color-black);
+  
   margin-bottom: 10px;
 }
 
 .limit_factor_list {
   margin-top: 10px;
   list-style: disc;
+}
+
+
+.cell {
+  word-wrap: break-word;
+  width: 50%;
 }
