--- a/src/routes/playWith/CreateRoomForm.module.scss
+++ b/src/routes/playWith/CreateRoomForm.module.scss
@@ -42,7 +42,6 @@
   height: auto;
   border-radius: 10px;
   background-color: var(--color-white);
-  overflow: hidden;
   margin-top: 10px;
   cursor: pointer;
   display: flex;
@@ -64,15 +63,17 @@
 }
 
 .toggle_problem {
-  width: 55vw;
-  height: 90%;
+  z-index: 2;
+  width: 100%;
+  height: 200px;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
   border-radius: 10px;
   margin-bottom: 5px;
   text-align: center;
   justify-content: center;
+  overflow: scroll;
+  padding-top: 155px;
 }
 
 .problem_item {
